text img domaine dactivite

--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,8 @@ header {
 }
 
 .header-photo {
-  width: 150px;
-  height: 150px;
+  width: 160px;
+  height: 200px;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 30px;
@@ -121,6 +121,7 @@ header {
 }
 
 .service-card h3 {
+  text-align: center;
   font-size: 1.5rem;
   margin-bottom: 15px;
 }
