--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ justify-content: space-around;
 nav img{
   width: 60px;
   height: 60px;
+  border-radius: 25%;
 }
 .nav-links {
   list-style: none;
@@ -71,7 +72,7 @@ header {
 .header-photo {
   width: 160px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 25%;
   object-fit: cover;
   margin-right: 30px;
 }
@@ -141,6 +142,7 @@ header {
 #honoraire h2 {
   font-size: 2.5rem;
   margin-bottom: 40px;
+  color: white;
 }
 
 .honoraires-container {
@@ -177,6 +179,7 @@ header {
 #avis h2 {
   font-size: 2.5rem;
   margin-bottom: 40px;
+  color: #3d010c;
 }
 
 .avis-container {
@@ -209,7 +212,10 @@ header {
   text-align: center;
   background-color: #3d010c;
 }
-
+#contact h2 {
+  font-size: 2.5rem;
+  color: white;
+}
 .contact-container {
   display: flex;
   justify-content: space-around;
