--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,12 @@ nav {
   text-transform: uppercase;
   padding: 10px 15px;
   transition: 0.3s;
+  background-color: #3d010c;
+  border-radius: 20px;
 }
 
 .nav-links a:hover {
-  background-color: #3d010c;
+  background-color: #640214;
   border-radius: 20px;
 }
 
@@ -150,8 +152,8 @@ header {
 }
 
 .header-photo {
-  width: 160px;
-  height: 200px;
+  width: 200px;
+  height: 250px;
   border-radius: 25%;
   object-fit: cover;
   margin-right: 30px;
@@ -280,7 +282,7 @@ header {
 .avis-slider {
   display: flex;
   gap: 20px; /* Espace entre les cartes */
-  animation: scrollAvis 20s linear infinite; /* Animation de défilement */
+  animation: scrollAvis 10s linear infinite; /* Animation de défilement */
 }
 
 /* Carte d'avis individuelle */
@@ -327,6 +329,13 @@ header {
   text-align: center;
   background-color: #3d010c;
 }
+.title-contact{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
 #contact h2 {
   font-size: 2.5rem;
   color: white;
@@ -352,7 +361,7 @@ header {
 .form-container {
   width: 40%;
   background-color: #fff;
-  padding: 20px;
+  padding: 40px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   min-width: 280px;
