ajout iframe map

--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,12 @@ nav {
   .nav-links {
     display: none;
   }
+  header{
+    justify-content: center;
+  }
+  .header-text{
+    max-width: 300px;
+  }
 }
 
 
@@ -147,6 +153,8 @@ header {
 .header-container {
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
   max-width: 1200px;
   width: 100%;
 }
@@ -156,7 +164,6 @@ header {
   height: 250px;
   border-radius: 25%;
   object-fit: cover;
-  margin-right: 30px;
 }
 
 .header-text h1 {
