--- a/styles.css
+++ b/styles.css
@@ -196,47 +196,65 @@ header {
   color: #ddd;
 }
 
-/* Domaine d'activité Section */
+
+/*domaine dactiviter*/
 #services {
   padding: 60px 20px;
   text-align: center;
   background-color: #fff;
 }
-
 #services h2 {
   font-size: 2.5rem;
   margin-bottom: 40px;
   color: #3d010c;
 }
-
 .services-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
   justify-content: center;
+  gap: 20px;
 }
-
 .service-card {
-  background-color: #fff;
-  padding: 40px;
-  width: 30%;
-  margin: 10px;
-  box-shadow: 0px 0px 10px 0px;
-  border-radius: 20px;
-  text-align: left;
-  min-width: 300px;
-
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  cursor: pointer;
 }
-
-.service-card h3 {
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+.service-card.flipped .card-inner {
+  transform: rotateY(180deg);
+}
+.card-front, .card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background: white;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: 15px;
 }
-
-.service-card p {
-  font-size: 1rem;
-  color: #3d010c;
+.card-front h3{
+  font-size: 1.5rem;
+}
+.card-back {
+  transform: rotateY(180deg);
+}
+.flip-button {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #3d010c;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /* Honoraire Section */
