--- a/styles.css
+++ b/styles.css
@@ -254,7 +254,7 @@ header::before {
   height: 100%;
   backface-visibility: hidden;
   background: white;
-  padding: 30px;
+  padding: 15px 10px 0px 30px;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   text-align: center;
