--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -475,9 +475,9 @@ transition: color 0.3s ease-in-out;
   padding: 5px;
   border-radius: 10px;
   background: rgb(255,255,255);
-  background: -moz-linear-gradient(156deg, rgba(255,255,255,1) 20%, #977632 100%);
-  background: -webkit-linear-gradient(156deg, rgba(255,255,255,1) 20%, #977632 100%);
-  background: linear-gradient(156deg, rgba(255,255,255,1) 20%, #977632 100%);
+  background: -moz-linear-gradient(156deg, rgba(255,255,255,1) 20%, #704d03 100%);
+  background: -webkit-linear-gradient(156deg, rgba(255,255,255,1) 20%, #704d03 100%);
+  background: linear-gradient(156deg, rgba(255,255,255,1) 20%, #704d03 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#3d010c",GradientType=1);
 }
 .footerA:hover{
