--- a/public/assets/css/stylesMedia.css
+++ b/public/assets/css/stylesMedia.css
@@ -8,7 +8,6 @@
 
    }
 
-     /* Masquer le bouton hamburger au-dessus de 768px */
   @media (min-width: 901px) {
     .menu {
       display: none;
@@ -17,9 +16,7 @@
     .nav ul {
       display: flex; 
     }
-    .bloc-hero img{
-      width: 200px;
-    }
+   
   }
  
    @media (max-width: 900px) {
@@ -27,29 +24,29 @@
          width: 70%;
         }
         .bloc-hero img{
-          width: 80px !important;
+          width: 120px;
+          height: 180px;
         }
         .nav ul {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            position: absolute;
-            top: 49px;
-            /* left: 0; */
-            right: -10px;
-            width: 250px;
-            padding: 10px;
-            background-color: #c5ab77;
-            padding-top: 20px;
-            gap: 20px;
-            transition: transform 0.4s ease-in-out;
-            transform: translateY(-100%);
-        }
-      
-        .nav.open ul {
-          display: flex;
-          transform: translateY(0); /* Menu glisse vers le bas lorsque ouvert */
-        }
+          display: none;
+          flex-direction: column;
+          align-items: center;
+          position: absolute;
+          top: 45px;
+          right: -10px;
+          width: 250px;
+          padding: 10px;
+          background-color: #c5ab77;
+          padding-top: 20px;
+          gap: 20px;
+          transition: transform 0.4s ease-in-out;
+          transform: translateY(-100%);
+      }
+    
+      .nav.open ul {
+        display: flex;
+        transform: translateY(0); /* Menu glisse vers le bas lorsque ouvert */
+      }
         .footer-container {
             flex-direction: column;
             align-items: center;
@@ -58,7 +55,6 @@
        
          .footer-logos {
             justify-content: center;
-            flex-direction: column-reverse;
             margin-bottom: 20px;
          }
        
@@ -71,6 +67,10 @@
  
     .hero-bloc-text{
       width: 100%;
+    }
+    .bloc-hero img{
+      width: 80px ;
+      height: 100px ;
     }
    }
    @media (max-width: 480px) {
@@ -92,5 +92,9 @@
      .container-why {
          padding: 0px;
      }
+   .bloc-hero img{
+    width: 70px;
+    height: 85px;
+   }
    }
  
